welcome.lessons.welcome.array.has271.Has271.scala.error
has271:15: error: ';' expected but 'return' found.
    }return false
     ^